--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,7 +5,7 @@
   align-items: center;
 
   margin: 0 0 30px;
-  background-color: #00acb0;
+  background-color: #257d7e;
   overflow: hidden;
 }
 
@@ -14,6 +14,7 @@
 }
 
 .nav-title {
+  font-family: Optima,Segoe,Segoe UI,Candara,Calibri,Arial,sans-serif;
   font-size: 24px;
   font-weight: 700;
   color: #f2f2f2;
@@ -24,7 +25,7 @@
 .navLink {
   display: inline-block;
   color: #f2f2f2;
-  background-color: #00acb0;
+  background-color: #257d7e;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
