--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,3 +1,11 @@
+
+/* .background {
+  background-color: rgb(164, 88, 164);
+} */
+
+
+
+
 /* --------------------------------------------------------------------------------
 Grid
 -------------------------------------------------------------------------------- */
