--- a/src/components/GraphPage/GraphPage.css
+++ b/src/components/GraphPage/GraphPage.css
@@ -3,8 +3,10 @@
     /* border: 2px solid black; */
     /* border-style: round; */
     border-radius: 4px;
-    width: 1000px !important;
-    height:600px !important;
+    width: 1100px;
+    height:700px;
     margin: auto;
     padding: 10px;
+
+
 }
